--- a/projects/chronam-public1/INSTALL
+++ b/projects/chronam-public1/INSTALL
@@ -67,8 +67,7 @@ have relevant data from the rdc in them:
 
 - install chronam requirements
   cd /ndnp/public1/chronam/projects/chronam-public1/
-  export LDFLAGS="-L/ndnp/public1/python2.6/lib -L/ndnp/public1/mysql5/lib/mysql"
-  pip install -r requirements.pip
+  LDFLAGS="-L/ndnp/public1/python2.6/lib -L/ndnp/public1/mysql5/lib/mysql" pip install -r requirements.pip
 
 - install chronam-public1
   pip install -e .
