--- a/projects/chronam-public1/INSTALL
+++ b/projects/chronam-public1/INSTALL
@@ -83,10 +83,8 @@ have relevant data from the rdc in them:
   cd /ndnp/public1/chronam/j2kmodule
   ln -s /ndnp/public1/j2k-3.18.2-solaris-x86-32/include include
   LDFLAGS='-L/ndnp/public1/python2.7/lib -L/ndnp/public1/j2k-3.18.2-solaris-x86-32/lib/' python setup.py install
-  cp /ndnp/public1/chronam/projects/chronam-public1/conf/settings-public1.py /ndnp/public1/chronam/projects/chronam-public1/chronam/settings.py
-  cd /ndnp/public1/chronam/projects/chronam-public1/chronam
-  python manage.py syncdb --noinput
-  python manage.py test
+  django-admin.py --settings=chronam.settings_sun11 syncdb --noinput
+  django-admin.py --settings=chronam.settings_sun11 test
 
 - solr
   wget http://www.apache.org/dist/lucene/solr/1.4.1/apache-solr-1.4.1.tgz
@@ -131,16 +129,16 @@ export LD_CONFIG_32
   cd /ndnp/public1/logs/
 
   # load titles and holdings
-  django-admin.py --settings=chronan.settings chronam_sync
+  django-admin.py --settings=chronam.settings_sun11 chronam_sync
 
   # start up one or more batch load processes to load all the batches
-  django-admin.py --settings=chronan.settings load_batches ../conf/batch_list &
+  django-admin.py --settings=chronam.settings_sun11 load_batches ../conf/batch_list &
 
   # or load a specific batch
-  django-admin.py --settings=chronan.settings load_batch batch_dlc_jamaica_ver01
+  django-admin.py --settings=chronam.settings_sun11 load_batch batch_dlc_jamaica_ver01
 
   # To generate filename_of_batch_list from a batches directory:
   find /ndnp/public1/data/batches/* -name batch_* -print -prune | sed 's/\(.*\)\///g'
 
   # load up links to flickr using your flickr key
-  django-admin.py --settings=chronan.settings flickr YOUR_FLICKR_KEY
+  django-admin.py --settings=chronam.settings_sun11 flickr YOUR_FLICKR_KEY
