--- a/projects/chronam-public1/INSTALL
+++ b/projects/chronam-public1/INSTALL
@@ -83,8 +83,8 @@ have relevant data from the rdc in them:
   cd /ndnp/public1/chronam/j2kmodule
   ln -s /ndnp/public1/j2k-3.18.2-solaris-x86-32/include include
   LDFLAGS='-L/ndnp/public1/python2.7/lib -L/ndnp/public1/j2k-3.18.2-solaris-x86-32/lib/' python setup.py install
-  django-admin.py --settings=chronam.settings_sun11 syncdb --noinput
-  django-admin.py --settings=chronam.settings_sun11 test
+  django-admin.py syncdb --settings=chronam.settings_sun11 --noinput
+  django-admin.py test --settings=chronam.settings_sun11
 
 - solr
   wget http://www.apache.org/dist/lucene/solr/1.4.1/apache-solr-1.4.1.tgz
