--- a/INSTALL
+++ b/INSTALL
@@ -31,26 +31,21 @@ To install all of these system dependencies on a Debian-based system, run::
         sudo apt-get install mercurial
         sudo apt-get install libjpeg-dev
 
-* aware library
-
-To install the aware library run the following commands::
-
-        wget --no-check-certificate --http-user your-username --http-password your-password https://rdc.lctl.gov/svn/ndnp/third-party/j2k-3.18.9-linux-x86-64.tar.gz
-	tar -zxvf j2k-3.18.9-linux-x86-64.tar.gz
-	sudo cp j2k-3.18.9-linux-x86-64/include/*.h /usr/include/
-	sudo cp j2k-3.18.9-linux-x86-64/lib/libawj2k.so.2.0.1 /usr/lib/libawj2k.so
-	#sudo cp j2k-3.18.9-linux-x86-64/lib/libawj2k.so /usr/lib
-	sudo ldconfig
-
 Create (Python) Environment
 ===========================
 
-export CHRONAM_HOME=/ndnp/chronam-dev
+export CHRONAM_HOME=/ndnp/chronam
 
 # create python environment
 cd ${CHRONAM_HOME}
 virtualenv --no-site-packages ${CHRONAM_HOME}
 source ${CHRONAM_HOME}/bin/activate
+
+
+Install j2kmodule
+=================
+
+pip install git+git://git.rdc.lctl.gov/j2kmodule#egg=j2kmodule
 
 
 Create Database
@@ -81,7 +76,7 @@ sudo ln -s ${CHRONAM_HOME}/conf/chronam.conf /etc/apache2/sites-enabled/
 
 sudo install -o `whoami` -g users -d ${CHRONAM_HOME}/static
 
-# sudo install -o `whoami` -g users -d ${CHRONAM_HOME}/.python-eggs
+sudo install -o `whoami` -g users -d ${CHRONAM_HOME}/.python-eggs
 
 
 Install Chronam Source
@@ -89,41 +84,27 @@ Install Chronam Source
 
 cd ${CHRONAM_HOME}
   
-# TODO: update the following re: repo reorg
-#
-# hg clone https://rdc.lctl.gov/hg/chronam-core
-# pip install -e chronam-core
-#
-# hg clone https://rdc.lctl.gov/hg/chronam-web
-# pip install -e chronam-web
-#
-# pip install -e j2kmodule
-
-hg clone https://rdc.lctl.gov/hg/chronam-loc
-  
-pip install -r chronam-loc/requirements.pip
-pip install -e chronam-loc
+pip install -r requirements.pip
 
 
 Configure Chronam
 =================
 
-ln -s ${CHRONAM_HOME}/conf/chronam_core_settings.py ${CHRONAM_HOME}/chronam-core/chronam/core/settings.py
-ln -s ${CHRONAM_HOME}/conf/chronam_loc_settings.py ${CHRONAM_HOME}/chronam-loc/chronam_loc/settings.py
-ln -s ${CHRONAM_HOME}/conf/chronam_settings.py ${CHRONAM_HOME}/chronam-web/chronam/settings.py
+Add ${CHRONAM_HOME}/conf to your virtualenv's Python path.
+  ( For example, add the line "import sys; sys.path.append("/ndnp/chronam/conf")" to a file named ${CHRONAM_HOME}/lib/python2.6/sitecustomize.py )
 
 mkdir ${CHRONAM_HOME}/data
 cd ${CHRONAM_HOME}/data
 hg clone https://rdc.lctl.gov/hg/ndnp-essays
   
-ln -s /vol/ndnp/chronam/bib .
+# TODO: ln -s /vol/ndnp/chronam/bib .
 
-django-admin.py syncdb --settings=chronam_loc.settings --noinput
+django-admin.py syncdb --settings=chronam_settings --noinput
 # if chronam.core is from a datacase created by pre south codebase
-# django-admin.py migrate chronam.core 0001 --fake --settings=chronam_loc.settings
-django-admin.py migrate chronam.core --settings=chronam_loc.settings
+# django-admin.py migrate chronam.core 0001 --fake --settings=chronam_settings
+# django-admin.py migrate chronam.core --settings=chronam_settings
 
-django-admin.py test --settings=chronam_loc.settings
+django-admin.py test --settings=chronam_settings
 
 
 Loading the Data
@@ -133,19 +114,19 @@ sudo install -o `whoami` -g users -d ${CHRONAM_HOME}/logs/
 cd ${CHRONAM_HOME}/logs/
 
 # load titles and holdings
-django-admin.py chronam_sync --settings=chronam.settings
+django-admin.py chronam_sync --settings=chronam_settings
 
-django-admin.py loaddata languages.json institutions.json ethnicities.json labor_presses.json countries.json --settings=chronam.settings
+django-admin.py loaddata languages.json institutions.json ethnicities.json labor_presses.json countries.json --settings=chronam_settings
 
 
 # start up one or more batch load processes to load all the batches
-django-admin.py load_batches --settings=chronam.settings ../conf/batch_list &
+django-admin.py load_batches --settings=chronam_settings ../conf/batch_list &
 
 # or load a specific batch
-django-admin.py load_batch batch_dlc_jamaica_ver01 --settings=chronam.settings 
+django-admin.py load_batch batch_dlc_jamaica_ver01 --settings=chronam_settings 
 
 # To generate filename_of_batch_list from a batches directory:
 find /vol/ndnp/chronam/batches/* -name batch_* -print -prune | sed 's/\(.*\)\///g'
 
 # load up links to flickr using your flickr key
-django-admin.py --settings=chronam.settings flickr YOUR_FLICKR_KEY
+django-admin.py --settings=chronam_settings flickr YOUR_FLICKR_KEY
