added missing import for core settings; added instructions for cloning media repo for memorious (currently lives inside chronam-loc repo) and updated settings file to point to the repo.

--- a/INSTALL
+++ b/INSTALL
@@ -96,6 +96,7 @@ Add ${CHRONAM_HOME}/conf to your virtualenv's Python path.
 mkdir ${CHRONAM_HOME}/data
 cd ${CHRONAM_HOME}/data
 hg clone https://rdc.lctl.gov/hg/ndnp-essays
+hg clone https://rdc.lctl.gov/hg/chronam-loc memorious # for media files
   
 # TODO: ln -s /vol/ndnp/chronam/bib .
 
