removed license and noted that it is now public domain in the README. it has already been flagged as public domain on sf.net

--- a/README
+++ b/README
@@ -13,3 +13,5 @@ Comments, questions and participation are welcome on the project's mailing
 list at SourceForge:
 
     https://lists.sourceforge.net/lists/listinfo/loc-ndnp-mail
+
+This software is in the Public Domain.
